# robomaster

./: BLUE2.avi  CMakeLists.txt  CMakeLists1.txt  autoaim.cpp  can.sh  classfier.cpp  classfier.h  readme.md  watchdog.sh
include/Antitop/: SpinDetector.h  rm_types.h
include/Imageprocess/: Imageprocess.hpp
include/Infantry-can/: CanSerial.h  const.h
include/autoaim/: autoaim.hpp
include/detector/: detector.hpp
include/digital_classifier/: classifier.hpp
include/gravity_compensate/: bs.xml  compensate.hpp
include/mercure/: mercure_driver.h
include/pnp/: pnp.hpp
include/predictor/: EKF.h  kalman.h
parameter/: 2.avi  Kalman.xml  Kalman1.xml  camera_param.xml  debug.xml  detect.xml  digital_recognition3.onnx  mercure.xml
src/: main.cpp
src/Antitop/: SpinDetector.cpp
src/Imageprocess/: Imageprocess.cpp
src/Infantry-can/: CanSerial.cpp
src/autoaim/: autoaim1.cpp
src/detector/: detector.cpp
src/digital_classifier/: classfier.cpp  classifier1.cpp
src/mercure/: CMakeLists.txt  mercure_driver.cpp
